--- a/apps/vite-native-skyline/pages/index/index.wxml
+++ b/apps/vite-native-skyline/pages/index/index.wxml
@@ -22,7 +22,7 @@
       </block>
     </view>
     <view class="usermotto">
-      <text class="user-motto">{{motto}}</text>
+      <text class="user-motto bg-[#232343] text-[#004343]">{{motto}}</text>
     </view>
   </view>
 </scroll-view>
