--- a/apps/vite-native-ts-skyline/miniprogram/pages/index/index.wxml
+++ b/apps/vite-native-ts-skyline/miniprogram/pages/index/index.wxml
@@ -22,7 +22,7 @@
       </block>
     </view>
     <view class="usermotto">
-      <text class="user-motto">{{motto}}</text>
+      <text class="user-motto text-[#234fff] bg-[#43ffff]">{{motto}}</text>
     </view>
   </view>
 </scroll-view>
