--- a/packages/weapp-tailwindcss/test/fixtures/css/v4-weapp-tailwindcss-default-output.before.css
+++ b/packages/weapp-tailwindcss/test/fixtures/css/v4-weapp-tailwindcss-default-output.before.css
@@ -1,12 +1,9 @@
 /*! tailwindcss v4.1.2 | MIT License | https://tailwindcss.com */
 @layer properties;
 :root, :host {
-  --color-zinc-800: oklch(0.274 0.006 286.033);
+  --color-zinc-800: oklch(27.4% .006 286.033);
 }
-*,
-:after,
-:before,
-::backdrop {
+*,:after,:before,::backdrop {
   box-sizing: border-box;
   border: 0 solid;
   margin: 0;
